Sophisticated Business: Fix Centre Image Alignment

--- a/sophisticated-business/style.css
+++ b/sophisticated-business/style.css
@@ -3937,7 +3937,7 @@ body.page .main-navigation {
 
 @media only screen and (min-width: 768px) {
   .entry .entry-content .wp-block-image .aligncenter {
-    margin: 0;
+    margin: 0 auto;
     width: calc(8 * (100vw / 12) - 28px);
   }
   .entry .entry-content .wp-block-image .aligncenter img {
